--- a/src/styles/header/header.scss
+++ b/src/styles/header/header.scss
@@ -1,4 +1,5 @@
 .header {
+  font-family: "Lato";
   max-width: 1170px;
   margin: 0 auto;
   display: flex;
@@ -7,6 +8,7 @@
   padding: 0 10px;
   padding-top: 12px;
   padding-bottom: 9px;
+
   ul {
     display: flex;
     gap: 30px;
